8149750: Decouple sun.misc.Signal from the base module
Reviewed-by: chegar, dholmes